# agentdetect

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
agentdetect/: Cargo.toml  README.md
agentdetect-tower/: .gitignore  Cargo.toml  README.md
agentdetect-tower/examples/: tower_demo.rs
agentdetect-tower/src/: lib.rs
agentdetect/examples/: axum_middleware.rs  basic.rs  bit_flip.rs  cli_to_api.rs  otel_demo.rs
agentdetect/src/: detect.rs  detection.rs  lib.rs  otel.rs  pattern.rs  propagation.rs  registry.rs
agentdetect/tests/: integration.rs
